[package]
name = "n5gest"
version = "0.1.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "CLI utilities for N5 files"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1.8"
indicatif = "0.9"
itertools = "0.7"
meval = "0.2"
n5 = "0.2.2"
num-traits = "0.2"
num-derive = "0.2"
prettytable-rs = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
