[package]
name = "n5gest"
version = "0.3.1"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"
description = "CLI utilities for N5 files"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/aschampion/n5gest"
keywords = ["n5", "tensor"]
categories = ["command-line-utilities", "filesystem", "science"]

[features]
nightly = ["serde_plain"]

[dependencies]
chrono = "0.4"
futures = "0.1"
futures-cpupool = "0.1.8"
indicatif = "0.13"
itertools = "0.7"
meval = "0.2"
n5 = "0.7"
num-traits = "0.2"
num-derive = "0.2"
prettytable-rs = "0.8"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strfmt = "0.1.6"
structopt = "0.2"

serde_plain = { version = "0.3", optional = true }

[dependencies.image]
version = "0.22"
# Don't include jpeg_rayon dependency, hdr which includes scoped_threadpool, or ico.
default-features = false
features = ["gif_codec", "jpeg", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "dxt"]

[profile.release]
lto = true
