[package]
name = "n5gest"
version = "0.4.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"
description = "CLI utilities for N5 files"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/aschampion/n5gest"
keywords = ["n5", "tensor"]
categories = ["command-line-utilities", "filesystem", "science"]

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
chrono = "0.4"
indicatif = "0.13"
itertools = "0.10"
meval = "0.2"
n5 = "0.7"
ndarray = "0.13"
num-traits = "0.2"
num-derive = "0.3"
prettytable-rs = "0.9"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_plain = "1.0"
serde_json = "1.0"
strfmt = "0.2"
structopt = "0.3"
tiff = "0.6"

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[dependencies.image]
version = "0.23"
# Don't include jpeg_rayon dependency, hdr which includes scoped_threadpool, or ico.
default-features = false
features = ["gif", "jpeg", "png", "pnm", "tga", "tiff", "webp", "bmp", "dxt"]

[profile.release]
lto = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/n5gest-{ target }.tgz"
bin-dir = "{ bin }-{ target }{ format }"
